tests/baselines/reference/wideningTuples3.errors.txt
tests/cases/conformance/types/tuple/wideningTuples3.ts(3,5): error TS7005: Variable 'b' implicitly has an '[any, any]' type.


==== tests/cases/conformance/types/tuple/wideningTuples3.ts (1 errors) ====
    var a: [any];
    
    var b = a = [undefined, null];
        ~
!!! error TS7005: Variable 'b' implicitly has an '[any, any]' type.